# libCombine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  index.html  params.json
.github/workflows/: checkout-submodules.sh  doxygen.yml  main.yml  (+1 more)
CMakeModules/: FindEXPAT.cmake  FindLIBSBML.cmake  FindZIPPER.cmake  FindZLIB.cmake
dev/: Doxyfile  combine-archive.xml
examples/: CMakeLists.txt  README.md
examples/c++/: CMakeLists.txt  create_archive.cpp  writeOutKnownFormats.cpp
html/: annotated.html  annotated_dup.js  class_ca_base.html  class_ca_base.js  class_ca_constructor_exception.html  class_ca_constructor_exception.js  class_ca_content.html  class_ca_content.js  class_ca_cross_ref.html  class_ca_cross_ref.js  class_ca_error.html  class_ca_error.js  class_ca_error_log.html  class_ca_error_log.js  class_ca_list_of.html  class_ca_list_of.js  class_ca_list_of_contents.html  class_ca_list_of_contents.js  class_ca_list_of_cross_refs.html  class_ca_list_of_cross_refs.js  class_ca_namespaces.html  class_ca_namespaces.js  class_ca_omex_manifest.html  class_ca_omex_manifest.js  class_ca_reader.html  class_ca_reader.js  class_ca_type_codes.html  class_ca_visitor.html  class_ca_visitor.js  class_ca_writer.html  class_ca_writer.js  class_combine_archive.html  class_combine_archive.js  class_known_formats.html  class_omex_description.html  class_omex_description.js  class_util.html  class_v_card.html  class_v_card.js  classes.html  (+63 more)
src/: CMakeLists.txt  libcombine-config.cmake.in  libcombine-static-config.cmake.in
tests/: test_combine.py
(+105 files in other folders)
